fixed too big margin on icon-nav mobile and an issue with desktop nav display on some resolutions

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ footer {
 .icon-navigation-wrapper {
   display: flex;
   border: var(--border) var(--dark-grey);
-  margin: 4rem 2rem 2rem 2rem;
+  margin: 1rem 2rem;
   justify-content: space-between;
   padding: 0.2rem;
 }
@@ -556,7 +556,7 @@ footer * p {
     padding: 0;
     margin: 0;
     list-style-type: none;
-    gap: 0.5rem;
+    gap: 0.3rem;
   }
 
   .desktop-nav ul a {
